separating auth and resource servers-part1

--- a/tonr/src/main/resources/sparklr.properties
+++ b/tonr/src/main/resources/sparklr.properties
@@ -1,5 +1,5 @@
-sparklrPhotoListURL=http://localhost:8090/sparklr/photos?format=xml
-sparklrPhotoURLPattern=http://localhost:8090/sparklr/photos/%s
-sparklrTrustedMessageURL=http://localhost:8090/sparklr/photos/trusted/message
+sparklrPhotoListURL=http://localhost:8100/resource/photos?format=xml
+sparklrPhotoURLPattern=http://localhost:8100/resource/photos/%s
+sparklrTrustedMessageURL=http://localhost:8100/resource/photos/trusted/message
 accessTokenUri=http://localhost:8090/sparklr/oauth/token
 userAuthorizationUri=http://localhost:8090/sparklr/oauth/authorize
